[package]
name = "rust_ga"
license = "MIT"
version = "0.1.3"
authors = ["Shashi Kant <shashitnak@gmail.com>"]
edition = "2018"
description = "A simple framework for testing genetic algorithms."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"